cfn-portfolio.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Portfolio Website on EC2. Portfolio Website will be deployed on Amazon Linux 2 ami-0f34c5ae932e6f0e4 EC2 Instance with custom security group which allows http connections on port 80, allows https connections on port 443 and ssh port 22 from anywhere. portfolio Website 
  is downloaded from my Public Github repository, then deployed on Apache Web Server. Rihanna says Work! Work! Work!


Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0f34c5ae932e6f0e4
      InstanceType: t2.micro
      KeyName: ssh-key # Bitte geben Sie Ihre Keyname
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        -                        
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64: |
            #! /bin/bash
            apt update -y
            apt install apache2
            FOLDER="https://raw.githubusercontent.com/Alfred-Dreyfus/portfolio-web"
            cd /var/www/html
            wget ${FOLDER}/index.html
            wget ${FOLDER}/style.css
            wget ${FOLDER}/bg1.jpg
            wget ${FOLDER}/bg2.jpg
            wget ${FOLDER}/bg3.jpg
            wget ${FOLDER}/bg4.jpg
            wget ${FOLDER}/erdem.png
            wget ${FOLDER}/logo.jpeg
            service apache2 start

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Portfolio Application URL
